# ternary_linear_code_generator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
services/: __init__.py  exceptions.py  ternary_code.py
tests/unit/: test_code.py
utils/: __init__.py  message_to_array.py
